Add notice about Thimble shutting down

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <h1 style="font-size: 6em; text-align: center; width: 5" class="spin">:^)</h1>
 
         <p>Filler text goes here. Text text words words words.</p>
-        <p><a href="https://thimbleprojects.org/chuzzy/185290/">Play some chess right now, click right here.</a></p>
+        <p><a href="https://thimbleprojects.org/chuzzy/185290/">Unfortunately, Thimble was shut down, so you can no longer play my chess game. :^(</a></p>
+        <p><a href="chuzzy.github.io/emojiopoly/board.html">Here's a sneak preview of my Monopoly game, but with emojis.</a></p>
 
         <p>Want to see how I made this cool spinning face and scrolling background? Ok, here you go:</p>
 
